# FoodTexture

./: .envrc  .gitignore  flake.nix  main.py  pyproject.toml
augmented_dataset/: 0.pt  1.pt  10.pt  100.pt  1000.pt  10000.pt  10001.pt  10002.pt  10003.pt  10004.pt  10005.pt  10006.pt  10007.pt  10008.pt  10009.pt  1001.pt  10010.pt  10011.pt  10012.pt  10013.pt  10014.pt  10015.pt  10016.pt  10017.pt  10018.pt  10019.pt  1002.pt  10020.pt  10021.pt  10022.pt  10023.pt  10024.pt  10025.pt  10026.pt  10027.pt  10028.pt  10029.pt  1003.pt  10030.pt  10031.pt  (+33380 more)
dataset/: 0.pt  1.pt  10.pt  100.pt  1000.pt  10000.pt  10001.pt  10002.pt  10003.pt  10004.pt  10005.pt  10006.pt  10007.pt  10008.pt  10009.pt  1001.pt  10010.pt  10011.pt  10012.pt  10013.pt  10014.pt  10015.pt  10016.pt  10017.pt  10018.pt  10019.pt  1002.pt  10020.pt  10021.pt  10022.pt  10023.pt  10024.pt  10025.pt  10026.pt  10027.pt  10028.pt  10029.pt  1003.pt  10030.pt  10031.pt  (+52025 more)
src/: augment_data.py  cGAN.py  generate.py  learn.py  preprocess.py
src/api/: app.py  generator.py
src/model/: augment_data.py  cGAN.py  config.py  download.py  generate.py  generate_audio.py  generate_image.py  learn.py  preprocess.py
