[project]
name = "foodtexture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audiomentations>=0.42.0",
    "fastapi>=0.116.1",
    "gensim>=4.3.3",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
