[project]
name = "foodtexture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audiomentations>=0.42.0",
    "fastapi>=0.116.1",
    "gensim>=4.3.3",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy==1.23.4",
    "parallel-wavegan>=0.6.1",
    "python-multipart>=0.0.20",
    "scipy==1.10.0",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
